--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://ea850763-5ca7-4987-8d1b-fe3a2e5e0e5d.preview.emergentagent.com
 WDS_SOCKET_PORT=443
